# RxnTools

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: all_cofactors.tsv  cofactors_with_CoF_codes.json
notebooks/: Prototype extracting many rules.ipynb  Prototype_finding_substructures.ipynb  Prototype_tests.ipynb  Untitled.ipynb  nb_01 - rxntools basics.ipynb  nb_01 _rxntools_basics.ipynb  nb_02 - template extraction nuances.ipynb  nb_02_template_extraction_nuances.ipynb  nb_03 - extract monosubstrate rxn templates.ipynb  nb_03_extract_monosubstrate_rxn_templates.ipynb  nb_04 - extract mono substrate run templates pt2.ipynb  nb_04 - extract mono substrate rxn templates pt2.ipynb  nb_04_extract_monosubstrate_rxn_templates_pt2.ipynb  nb_05 - run reactions with stereo.ipynb  nb_05_map_known_reactions_to_JN rules.ipynb  nb_06_explore_distribution_of_JN_mapped_rxns.ipynb  nb_07_prototype_creating_new_imt_rules.ipynb  nb_08_map_BRENDA_rxns.ipynb  prototype extracting reaction templates.ipynb  prototype_running_reaction.ipynb  test_does_template_fit.ipynb
rxntools/: draw.py  reaction.py  rxn_enumerator.py  utils.py
scripts/: 00_map_rxns_to_JN_rules.py  00_map_rxns_to_JN_rules_with_MPI.py  00_map_rxns_to_JN_rules_with_multiprocessing.py  00_map_rxns_to_JN_rules_with_single_core.py  00_preprocessing.py  00_preprocessing_decarboxylases.py  00_prototype_decarboxylases.py  01_create_new_imt_rules.py  01_post_process_JN_rule_mapping.py  02_create_new_imt_rules.py
tests/: test_cofactors_data.py  test_processed_datasets.py  test_reaction.py  test_utils.py
(+3 files in other folders)
